Travis: Enable build for s390x
Signed-off-by: Stefan Berger <stefanb@linux.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,3 +35,7 @@ matrix:
     arch: ppc64le
     env: DOCKERFILE=Dockerfile.fedora
 
+  - os: linux
+    arch: s390x
+    env: DOCKERFILE=Dockerfile.fedora
+
