--- a/Dockerfile.opensuse-tumbleweed
+++ b/Dockerfile.opensuse-tumbleweed
@@ -7,7 +7,10 @@ RUN zypper install -y diff automake autoconf libtool gcc gcc-c++ make openssl-de
  && git clone https://github.com/stefanberger/swtpm.git
 
 ARG LIBTPMS_BRANCH=master
+ARG DATE
 RUN cd libtpms \
+ && echo ${DATE} > /.date \
+ && git pull \
  && git checkout ${LIBTPMS_BRANCH} \
  && ./autogen.sh --prefix=/usr --libdir=/usr/lib64 --with-openssl --with-tpm2 \
  && make -j$(nproc) V=1 \
@@ -16,6 +19,7 @@ RUN cd libtpms \
 
 ARG SWTPM_BRANCH=master
 RUN cd swtpm \
+ && git pull \
  && git checkout ${SWTPM_BRANCH} \
  && ./autogen.sh --prefix=/usr --libdir=/usr/lib64 --with-openssl --with-tss-user=root --with-tss-group=tss \
  && make -j$(nproc) V=1 \
