--- a/Dockerfile.fedora
+++ b/Dockerfile.fedora
@@ -6,8 +6,11 @@ RUN dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ ope
  && git clone https://github.com/stefanberger/swtpm.git
 
 ARG LIBTPMS_BRANCH=master
-RUn cd libtpms \
- && git checkout ${LIBTPMS_BRANCH:-master} \
+ARG DATE
+RUN cd libtpms \
+ && echo ${DATE} > /.date \
+ && git pull \
+ && git checkout ${LIBTPMS_BRANCH} \
  && ./autogen.sh --prefix=/usr --libdir=/usr/lib64 --with-openssl --with-tpm2 --disable-dependency-tracking \
  && make -j$(nproc) V=1 \
  && make -j$(nproc) V=1 check \
@@ -15,7 +18,8 @@ RUn cd libtpms \
 
 ARG SWTPM_BRANCH=master
 RUN cd swtpm \
- && git checkout ${SWTPM_BRANCH:-master} \
+ && git pull \
+ && git checkout ${SWTPM_BRANCH} \
  && ./autogen.sh --prefix=/usr --libdir=/usr/lib/x86_64-linux-gnu --with-openssl --disable-dependency-tracking \
  && make -j$(nproc) V=1 \
  && make -j$(nproc) V=1 check \
