--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -1,6 +1,7 @@
 FROM centos:latest
 
-RUN dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ openssl-devel gawk git \
+RUN dnf -y update \
+ && dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ openssl-devel gawk git \
  && git clone https://github.com/stefanberger/libtpms.git \
  && dnf -y install which python3 expect libtasn1-devel socat trousers tpm-tools gnutls-devel gnutls-utils net-tools libseccomp-devel \
  && pip3 install twisted \
