--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -4,7 +4,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
  && apt-get -y update \
  && apt-get -y install automake autoconf libtool gcc build-essential libssl-dev pkg-config gawk git \
  && git clone https://github.com/stefanberger/libtpms.git \
- && apt-get -y install expect libtasn1-dev socat tpm-tools python3-twisted gnutls-dev gnutls-bin net-tools libseccomp-dev softhsm \
+ && apt-get -y install expect libtasn1-dev socat tpm-tools python3 python3-twisted gnutls-dev gnutls-bin net-tools libseccomp-dev softhsm \
  && git clone https://github.com/stefanberger/swtpm.git
 
 ARG LIBTPMS_BRANCH=master
