--- a/Dockerfile.fedora
+++ b/Dockerfile.fedora
@@ -1,8 +1,9 @@
 FROM fedora:latest
 
-RUN dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ openssl-devel git \
+RUN dnf -y update \
+ && dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ openssl-devel git \
  && git clone https://github.com/stefanberger/libtpms.git \
- && dnf -y install which expect libtasn1-devel socat tpm-tools trousers python3-twisted gnutls-devel gnutls-utils net-tools libseccomp-devel softhsm \
+ && dnf -y install which expect libtasn1-devel socat tpm-tools trousers python3 python3-twisted gnutls-devel gnutls-utils net-tools libseccomp-devel softhsm \
  && git clone https://github.com/stefanberger/swtpm.git
 
 ARG LIBTPMS_BRANCH=master
