--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -3,7 +3,8 @@ FROM centos:latest
 RUN dnf -y update \
  && dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ openssl-devel gawk git \
  && git clone https://github.com/stefanberger/libtpms.git \
- && dnf -y install which python3 expect libtasn1-devel socat trousers tpm-tools gnutls-devel gnutls-utils net-tools libseccomp-devel \
+ && dnf -y install which python3 python3-cryptography python3-pip python3-setuptools expect libtasn1-devel \
+    socat trousers tpm-tools gnutls-devel gnutls-utils net-tools libseccomp-devel \
  && pip3 install twisted \
  && git clone https://github.com/stefanberger/swtpm.git
 
@@ -27,3 +28,7 @@ RUN cd swtpm \
  && make -j$(nproc) V=1 check \
  && make -j$(nproc) install
 
+RUN mkdir -p /tmp/myvtpm1.2 && mkdir -p /tmp/myvtpm2
+RUN [ "$SWTPM_BRANCH" = "stable-0.3.0" ] && chown tss:root /tmp/myvtpm1.2 || exit 0
+RUN swtpm_setup --tpmstate /tmp/myvtpm1.2 --create-ek-cert --create-platform-cert \
+ && swtpm_setup --tpmstate /tmp/myvtpm2   --create-ek-cert --create-platform-cert --tpm2
