--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: c
 
 script:
   - docker build --build-arg LIBTPMS_BRANCH=master       --build-arg SWTPM_BRANCH=master       -f ${DOCKERFILE} . || travis_terminate 1
+  - docker build --build-arg LIBTPMS_BRANCH=stable-0.7.0 --build-arg SWTPM_BRANCH=stable-0.4   -f ${DOCKERFILE} . || travis_terminate 1
   - docker build --build-arg LIBTPMS_BRANCH=stable-0.7.0 --build-arg SWTPM_BRANCH=stable-0.3.0 -f ${DOCKERFILE} . || travis_terminate 1
 
 matrix:
