OpenSUSE: Convert Docker file to script file to work around install issues
This patch is a work-around for the follwing issue. The issue seems
to be related to Docker rather than OpenSUSE.

(76/80) Installing: openssh-server-8.4p1-4.1.x86_64 [..error]
Abort, retry, ignore? [a/r/i] (a): a
Installation of openssh-server-8.4p1-4.1.x86_64 failed:
Error: Subprocess failed. Error: RPM failed: find: '/etc/init.d/rc[35].d': No such file or directory
ERROR: neither useradd nor busybox found!
error: %prein(openssh-server-8.4p1-4.1.x86_64) scriptlet failed, exit status 1
error: openssh-server-8.4p1-4.1.x86_64: install failed
Warning: %posttrans scripts skipped while aborting:
    pam-1.5.1-3.2.x86_64.rpm
    shadow-4.8.1-5.2.x86_64.rpm
    openssh-server-8.4p1-4.1.x86_64.rpm

The only solution seems to be to convert the Dockerfile into
a script file and use docker run --privileged to run it.

Signed-off-by: Stefan Berger <stefanb@linux.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ services:
 language: c
 
 script:
-  - docker build --build-arg LIBTPMS_BRANCH=master       --build-arg SWTPM_BRANCH=master       -f ${DOCKERFILE} . || travis_terminate 1
-  - docker build --build-arg LIBTPMS_BRANCH=stable-0.7.0 --build-arg SWTPM_BRANCH=stable-0.5   -f ${DOCKERFILE} . || travis_terminate 1
-  - docker build --build-arg LIBTPMS_BRANCH=stable-0.7.0 --build-arg SWTPM_BRANCH=stable-0.4   -f ${DOCKERFILE} . || travis_terminate 1
+  - if [ -z "$IMG" ]; then docker build --build-arg LIBTPMS_BRANCH=master       --build-arg SWTPM_BRANCH=master       -f ${DOCKERFILE} . || travis_terminate 1; fi
+  - if [ -z "$IMG" ]; then docker build --build-arg LIBTPMS_BRANCH=stable-0.7.0 --build-arg SWTPM_BRANCH=stable-0.5   -f ${DOCKERFILE} . || travis_terminate 1; fi
+  - if [ -z "$IMG" ]; then docker build --build-arg LIBTPMS_BRANCH=stable-0.7.0 --build-arg SWTPM_BRANCH=stable-0.4   -f ${DOCKERFILE} . || travis_terminate 1; fi
+  - if [ -n "$IMG" ]; then docker run --privileged --env LIBTPMS_BRANCH=master       --env SWTPM_BRANCH=master     -v ${PWD}:/test ${IMG} /test/test.$(echo $IMG | tr "/" "-") || travis_terminate 1; fi
+  - if [ -n "$IMG" ]; then docker run --privileged --env LIBTPMS_BRANCH=stable-0.7.0 --env SWTPM_BRANCH=stable-0.5 -v ${PWD}:/test ${IMG} /test/test.$(echo $IMG | tr "/" "-") || travis_terminate 1; fi
+  - if [ -n "$IMG" ]; then docker run --privileged --env LIBTPMS_BRANCH=stable-0.7.0 --env SWTPM_BRANCH=stable-0.4 -v ${PWD}:/test ${IMG} /test/test.$(echo $IMG | tr "/" "-") || travis_terminate 1; fi
 
 matrix:
   include:
@@ -26,7 +29,7 @@ matrix:
     env: DOCKERFILE=Dockerfile.debian
 
   - os: linux
-    env: DOCKERFILE=Dockerfile.opensuse-tumbleweed
+    env: IMG=opensuse/tumbleweed
 
   - os: linux
     arch: arm64
