Add test for CentOS 8
Signed-off-by: Stefan Berger <stefanb@linux.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ matrix:
     env: DOCKERFILE=Dockerfile.centos
 
   - os: linux
+    env: DOCKERFILE=Dockerfile.centos-8
+
+  - os: linux
     env: DOCKERFILE=Dockerfile.fedora
 
   - os: linux
