Fedora: Convert Docker file to script file to work around autoconf issues
Convert the Dockefile for Fedora into a script file to work around
the following autconf issue also previously seen with OpenSUSE:

autoreconf: Entering directory `.'
autoreconf: configure.ac: not using Gettext
autoreconf: running: aclocal --force -I m4
autoreconf: configure.ac: tracing
autoreconf: configure.ac: not using Libtool
autoreconf: running: /usr/bin/autoconf --force
/usr/bin/autoconf: This script requires a shell more modern than all
/usr/bin/autoconf: the shells that I found on your system.
/usr/bin/autoconf: Please tell bug-autoconf@gnu.org about your system,
/usr/bin/autoconf: including any error possibly output before this
/usr/bin/autoconf: message. Then install a modern shell, or manually run
/usr/bin/autoconf: the script under such a shell if you do have one.

Signed-off-by: Stefan Berger <stefanb@linux.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
     env: DOCKERFILE=Dockerfile.centos-8
 
   - os: linux
-    env: DOCKERFILE=Dockerfile.fedora
+    env: IMG=fedora
 
   - os: linux
     env: DOCKERFILE=Dockerfile.ubuntu
@@ -36,13 +36,12 @@ matrix:
 
   - os: linux
     arch: arm64
-    env: DOCKERFILE=Dockerfile.fedora
+    env: IMG=fedora
 
   - os: linux
     arch: ppc64le
-    env: DOCKERFILE=Dockerfile.fedora
+    env: IMG=fedora
 
   - os: linux
     arch: s390x
-    env: DOCKERFILE=Dockerfile.fedora
-
+    env: IMG=fedora
