--- a/Dockerfile.centos-8
+++ b/Dockerfile.centos-8
@@ -4,7 +4,7 @@ RUN dnf -y update \
  && dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ openssl-devel gawk git \
  && git clone https://github.com/stefanberger/libtpms.git \
  && dnf -y install which python3 python3-cryptography python3-pip python3-setuptools expect libtasn1-devel \
-    socat trousers tpm-tools gnutls-devel gnutls-utils net-tools libseccomp-devel \
+    socat trousers tpm-tools gnutls-devel gnutls-utils net-tools libseccomp-devel json-glib-devel \
  && pip3 install twisted \
  && git clone https://github.com/stefanberger/swtpm.git
 
