--- a/Dockerfile.centos-8
+++ b/Dockerfile.centos-8
@@ -14,7 +14,7 @@ RUN cd libtpms \
  && echo ${DATE} > /.date \
  && git pull \
  && git checkout ${LIBTPMS_BRANCH} \
- && ./autogen.sh --prefix=/usr --libdir=/usr/lib64 --with-openssl --with-tpm2 --disable-dependency-tracking \
+ && ./autogen.sh --prefix=/usr --libdir=/usr/lib64 --with-openssl --with-tpm2 \
  && make -j$(nproc) V=1 \
  && make -j$(nproc) V=1 check \
  && make install
@@ -23,7 +23,7 @@ ARG SWTPM_BRANCH=master
 RUN cd swtpm \
  && git pull \
  && git checkout ${SWTPM_BRANCH} \
- && ./autogen.sh --prefix=/usr --libdir=/usr/lib/x86_64-linux-gnu --with-openssl --disable-dependency-tracking \
+ && ./autogen.sh --prefix=/usr --libdir=/usr/lib/x86_64-linux-gnu --with-openssl \
  && make -j$(nproc) V=1 \
  && make -j$(nproc) V=1 VERBOSE=1 check \
  && make -j$(nproc) install
