--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -1,15 +1,10 @@
-FROM centos:latest
-
-RUN rpm -e --nodeps centos-linux-repos \
-  && rpm -Uvh \
-     http://mirror.centos.org/centos/8-stream/BaseOS/x86_64/os/Packages/centos-gpg-keys-8-4.el8.noarch.rpm \
-     http://mirror.centos.org/centos/8-stream/BaseOS/x86_64/os/Packages/centos-stream-repos-8-4.el8.noarch.rpm
+FROM quay.io/centos/centos:stream9
 
 RUN dnf -y update \
  && dnf -y install diffutils make file automake autoconf libtool gcc gcc-c++ openssl-devel gawk git \
  && git clone https://github.com/stefanberger/libtpms.git \
  && dnf -y install which python3 python3-cryptography python3-pip python3-setuptools expect libtasn1-devel \
-    socat trousers tpm-tools gnutls-devel gnutls-utils net-tools libseccomp-devel json-glib-devel \
+    socat gnutls-devel gnutls-utils net-tools libseccomp-devel json-glib-devel \
  && pip3 install twisted \
  && git clone https://github.com/stefanberger/swtpm.git
 
