Alpine: Meed to install bash now since missing in default container
Fun fun fun ...

Signed-off-by: Stefan Berger <stefanb@linux.ibm.com>

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,7 +1,7 @@
 FROM alpine:latest
 
 RUN apk update && apk upgrade \
- && apk add openssl-dev automake autoconf build-base libtool git make  \
+ && apk add openssl-dev automake autoconf bash build-base libtool git make  \
  && git clone https://github.com/stefanberger/libtpms.git \
  && apk add socat gawk libtasn1-dev gnutls gnutls-utils gnutls-dev expect libseccomp-dev softhsm \
     python3 py3-cryptography py3-pip py3-twisted py3-setuptools  json-glib-dev \
