Ubuntu: Convert to build using 'run' rather 'build' to avoid errors
Signed-off-by: Stefan Berger <stefanb@linux.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
     env: IMG=fedora
 
   - os: linux
-    env: DOCKERFILE=Dockerfile.ubuntu
+    env: IMG=ubuntu IMG_VERSION=latest
 
   - os: linux
     env: DOCKERFILE=Dockerfile.debian
