--- a/Dockerfile.centos-8
+++ b/Dockerfile.centos-8
@@ -10,6 +10,7 @@ RUN dnf -y --nobest update \
  && git clone https://github.com/stefanberger/libtpms.git \
  && dnf -y install which python3 python3-cryptography python3-pip python3-setuptools expect libtasn1-devel \
     socat trousers tpm-tools gnutls-devel gnutls-utils net-tools libseccomp-devel json-glib-devel \
+    gmp-devel patch \
  && pip3 install twisted \
  && git clone https://github.com/stefanberger/swtpm.git
 
@@ -24,10 +25,15 @@ RUN cd libtpms \
  && make -j$(nproc) V=1 check \
  && make install
 
+COPY 0001-centos-8-Disable-pkg-config-for-gmp.patch /
+
 ARG SWTPM_BRANCH=master
 RUN cd swtpm \
  && git pull \
  && git checkout ${SWTPM_BRANCH} \
+ && if [ -n "$(grep GMP_CFLAGS configure.ac)" ]; then \
+      patch -p1 < /0001-centos-8-Disable-pkg-config-for-gmp.patch; \
+    fi \
  && ./autogen.sh --prefix=/usr --with-openssl \
  && make -j$(nproc) V=1 \
  && make -j$(nproc) V=1 VERBOSE=1 check \
