alpine: Move from Dockerfile to image
Signed-off-by: Stefan Berger <stefanb@linux.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 matrix:
   include:
   - os: linux
-    env: DOCKERFILE=Dockerfile.alpine
+    env: IMG=alpine
 
   - os: linux
     env: IMG=quay.io/centos/centos IMG_VERSION=stream9
